[project]
name = "ruby-to-wheel"
version = "0.1.0"
description = "Package pre-built Ruby binaries into Python wheels"
requires-python = ">=3.10"
license = "Apache-2.0"
dependencies = []

[project.scripts]
ruby-to-wheel = "ruby_to_wheel:main"

[dependency-groups]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
